# HospitalCostModeling

./: .gitignore  README.md  TODO.md  app.py  dataExploration.qmd  dataModeling.qmd  data_pull.sh  pyproject.toml  requirements.txt
data/03. Medical Cost Prediction/: README.md
src/models/: mlm.py
