[project]
name = "HospitalCostModeling"
version = "0.1.0"
requires-python = ">= 3.12.3"
dependencies = [
    "datetime>=6.0",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "statsmodels>=0.14.6",
    "streamlit>=1.52.2",
    "tabulate>=0.9.0",
]
